segund commit falta persistecia

--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "@nuxt/devtools": "latest",
     "@nuxt/ui": "^2.19.2",
     "nuxt": "^3.14.159"
+  },
+  "dependencies": {
+    "@nuxtjs/toast": "^3.3.1",
+    "firebase": "^11.0.2",
+    "pinia": "^2.2.6",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   }
 }
