--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "nuxt": "^3.14.159"
   },
   "dependencies": {
+    "@nuxt/typescript-build": "^3.0.2",
     "@nuxtjs/toast": "^3.3.1",
     "firebase": "^11.0.2",
     "pinia": "^2.2.6",
+    "typescript": "^5.6.3",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
   }
